--- a/index.html
+++ b/index.html
@@ -1,77 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+  <title>Document</title>
 </head>
+
 <body>
 
-    <header class="header">
-      <h1>Weather Update</h1>
-    </header>
+  <header class="myHeader">
+    <h1>Weather Update</h1>
+  </header>
 
-    <div class="container">
-        <div class="row align-items-start">
-          <section class="row justify-content-around">
 
-            <div class="col-12 col-sm-6 col-lg-4 mb-3">
-              <div class="card">
-                <h3 class="card-header">
-                  Service 1
-                </h3>
-                <div class="card-body">
-                  <p class="card-text">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo accusantium dolor at, blanditiis rem
-                    quisquam ipsam ipsum. Magnam ut quibusdam facilis consequatur veritatis, ullam molestiae, inventore
-                    neque,
-                    quas obcaecati laborum?
-                  </p>
-                  <button class="btn btn-block btn-info">Learn more.</button>
-                </div>
+  <div class="container">
+
+    <!-- Search / search history @ left side of page section -->
+    <div class="row align-items-start">
+      <section class="row justify-content-around">
+
+        <div class="col-12 col-sm-6 col-lg-3 mb-3">
+          <div class="card">
+            <h3 class="card-header">
+              Enter Location
+            </h3>
+            <div class="card-body">
+              <div class="input-group mb-3 d-grip gap-2 ">
+                <span class="input-group-text" id="basic-addon1">city:</span>
+                <input type="text" class="form-control cityInput" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
               </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4 mb-3">
-              <div class="card">
-                <h3 class="card-header">
-                  Service 2
-                </h3>
-                <div class="card-body">
-                  <p class="card-text">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo accusantium dolor at, blanditiis rem
-                    quisquam ipsam ipsum. Magnam ut quibusdam facilis consequatur veritatis, ullam molestiae, inventore
-                    neque,
-                    quas obcaecati laborum?
-                  </p>
-                  <button class="btn btn-block btn-info">Learn more.</button>
-                </div>
+              <div class="d-grid gap-2">
+                <button type="button" class="btn btn-outline-primary mb-3 submitButton">search</button>
               </div>
+              <p class="card-text">
+                This is where you will type the cityName into the search box. <br>
+                <br>
+                The history of your searches will show below the search box.
+              </p>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 mb-3">
-              <div class="card">
-                <h3 class="card-header">
-                  Service 3
-                </h3>
-                <div class="card-body">
-                  <p class="card-text">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo accusantium dolor at, blanditiis rem
-                    quisquam ipsam ipsum. Magnam ut quibusdam facilis consequatur veritatis, ullam molestiae, inventore
-                    neque,
-                    quas obcaecati laborum?
-                  </p>
-                  <button class="btn btn-block btn-info">Learn more.</button>
-                </div>
-              </div>
-            </div>
-          </section>
+          </div>
         </div>
-      </div>
-    
+
+        <!-- Weather display section -->
+        <div class="col-12 col-sm-6 col-lg-9 mb-3">
+
+          <!-- Top row with current search -->
+          <div class="row align-items-start">
+            <section class="row justify-content-around">
+              <div class="card">
+                <div class="card-body">
+                  <p class="card-text">
+                    <h3> Los Angeles 8/28/2021 </h3> <br>
+                    <br>
+                    cityName <br>
+                    date and an icon representation of weather conditions <br>
+                    temp <br> 
+                    humidity <br>
+                    windSpeed <br> 
+                    uvIndex
+                  </p>
+                </div>
+              </div>
+            </section>
+          </div>
+
+          <!-- Lower row with 5 day forcast -->
+          <div class="row align-items-start">
+            <section class="row justify-content-around">
+
+              <div class="col-12 col-sm-6 col-lg-2 mt-3">
+                <div class="card">
+                  <!-- <h3 class="card-header">
+                    Service 2
+                  </h3> -->
+                  <div class="card-body">
+                    <p class="card-text">
+                      Lorem, ipsum dolor sit amet consectetur 
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col-12 col-sm-6 col-lg-2 mt-3">
+                <div class="card">
+                  <!-- <h3 class="card-header">
+                    Service 3
+                  </h3> -->
+                  <div class="card-body">
+                    <p class="card-text">
+                      Lorem, ipsum dolor sit amet consectetur 
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-sm-6 col-lg-2 mt-3">
+                <div class="card">
+                  <!-- <h3 class="card-header">
+                    Service 3
+                  </h3> -->
+                  <div class="card-body">
+                    <p class="card-text">
+                      Lorem, ipsum dolor sit amet consectetur 
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-sm-6 col-lg-2 mt-3">
+                <div class="card">
+                  <!-- <h3 class="card-header">
+                    Service 3
+                  </h3> -->
+                  <div class="card-body">
+                    <p class="card-text">
+                      Lorem, ipsum dolor sit amet consectetur 
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-sm-6 col-lg-2 mt-3">
+                <div class="card">
+                  <!-- <h3 class="card-header">
+                    Service 3
+                  </h3> -->
+                  <div class="card-body">
+                    <p class="card-text">
+                      Lorem, ipsum dolor sit amet consectetur 
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+            </section>
+          </div>
+
+
+
+
+      </section>
+    </div>
+  </div>
+
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
 </html>
