inserted new api key

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               Enter Location
             </h3>
             <div class="card-body">
-              <div class="input-group mb-3 d-grip gap-2 ">
+              <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">city:</span>
                 <input type="text" class="form-control cityInput" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
               </div>
@@ -155,5 +155,5 @@
   integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
+<script src="assets/js/script.js"></script>
 </html>
