pulling data from URL fetch()

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="card">
                 <div class="card-body">
                   <p class="card-text">
-                    <h3> Los Angeles 8/28/2021 </h3> <br>
+                    <h3 class="currCity"></h3> <br>
                     <br>
                     cityName <br>
                     date and an icon representation of weather conditions <br>
