collected data is displayed on web page

--- a/index.html
+++ b/index.html
@@ -56,13 +56,7 @@
                 <div class="card-body">
                   <p class="card-text">
                     <h3 class="currCity"></h3> <br>
-                    <br>
-                    cityName <br>
-                    date and an icon representation of weather conditions <br>
-                    temp <br> 
-                    humidity <br>
-                    windSpeed <br> 
-                    uvIndex
+                    <div class="dispDay0"></div>
                   </p>
                 </div>
               </div>
@@ -79,9 +73,7 @@
                     Service 2
                   </h3> -->
                   <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur 
-                    </p>
+                    <div class="dispDay1 futureForcast"></div>
                   </div>
                 </div>
               </div>
@@ -93,9 +85,7 @@
                     Service 3
                   </h3> -->
                   <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur 
-                    </p>
+                    <div class="dispDay2 futureForcast"></div>
                   </div>
                 </div>
               </div>
@@ -106,9 +96,7 @@
                     Service 3
                   </h3> -->
                   <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur 
-                    </p>
+                    <div class="dispDay3 futureForcast"></div>
                   </div>
                 </div>
               </div>
@@ -119,9 +107,7 @@
                     Service 3
                   </h3> -->
                   <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur 
-                    </p>
+                    <div class="dispDay4 futureForcast"></div>
                   </div>
                 </div>
               </div>
@@ -132,9 +118,7 @@
                     Service 3
                   </h3> -->
                   <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur 
-                    </p>
+                    <div class="dispDay5 futureForcast"></div>
                   </div>
                 </div>
               </div>
