--- a/index.html
+++ b/index.html
@@ -25,23 +25,20 @@
       <section class="row justify-content-around">
 
         <div class="col-12 col-sm-6 col-lg-3 mb-3">
-          <div class="card">
+          <div class="card searchContainer">
             <h3 class="card-header">
               Enter Location
             </h3>
             <div class="card-body">
               <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">city:</span>
-                <input type="text" class="form-control cityInput" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                <input type="text" class="form-control cityInput" name="search-input" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
               </div>
               <div class="d-grid gap-2">
                 <button type="button" class="btn btn-outline-primary mb-3 submitButton">search</button>
               </div>
-              <p class="card-text">
-                This is where you will type the cityName into the search box. <br>
-                <br>
-                The history of your searches will show below the search box.
-              </p>
+              <form id="city-input-form"></form>
+              <ul id="city-list"></ul>
             </div>
           </div>
         </div>
@@ -52,10 +49,10 @@
           <!-- Top row with current search -->
           <div class="row align-items-start">
             <section class="row justify-content-around">
-              <div class="card">
+              <div class="card currentDayContainer">
                 <div class="card-body">
                   <p class="card-text">
-                    <h3 class="currCity"></h3> <br>
+                    <h3 class="currCity"></h3>
                     <div class="dispDay0"></div>
                   </p>
                 </div>
@@ -66,58 +63,59 @@
           <!-- Lower row with 5 day forcast -->
           <div class="row align-items-start">
             <section class="row justify-content-around">
+              <h6 class="forecastHeader"> 5 Day Forecast :</h6>
 
-              <div class="col-12 col-sm-6 col-lg-2 mt-3">
-                <div class="card">
+              <div class="col-12 col-sm-6 col-lg-2 mt-0 p-0">
+                <div class="card futureDayContainer">
                   <!-- <h3 class="card-header">
                     Service 2
                   </h3> -->
-                  <div class="card-body">
+                  <div class="card-body p-2">
                     <div class="dispDay1 futureForcast"></div>
                   </div>
                 </div>
               </div>
 
 
-              <div class="col-12 col-sm-6 col-lg-2 mt-3">
-                <div class="card">
+              <div class="col-12 col-sm-6 col-lg-2 mt-0 p-0">
+                <div class="card futureDayContainer">
                   <!-- <h3 class="card-header">
                     Service 3
                   </h3> -->
-                  <div class="card-body">
+                  <div class="card-body p-2">
                     <div class="dispDay2 futureForcast"></div>
                   </div>
                 </div>
               </div>
 
-              <div class="col-12 col-sm-6 col-lg-2 mt-3">
-                <div class="card">
+              <div class="col-12 col-sm-6 col-lg-2 mt-0 p-0">
+                <div class="card futureDayContainer">
                   <!-- <h3 class="card-header">
                     Service 3
                   </h3> -->
-                  <div class="card-body">
+                  <div class="card-body p-2 futureDayContainer">
                     <div class="dispDay3 futureForcast"></div>
                   </div>
                 </div>
               </div>
 
-              <div class="col-12 col-sm-6 col-lg-2 mt-3">
+              <div class="col-12 col-sm-6 col-lg-2 mt-0 p-0">
                 <div class="card">
                   <!-- <h3 class="card-header">
                     Service 3
                   </h3> -->
-                  <div class="card-body">
+                  <div class="card-body p-2 futureDayContainer">
                     <div class="dispDay4 futureForcast"></div>
                   </div>
                 </div>
               </div>
 
-              <div class="col-12 col-sm-6 col-lg-2 mt-3">
-                <div class="card">
+              <div class="col-12 col-sm-6 col-lg-2 mt-0 p-0">
+                <div class="card futureDayContainer">
                   <!-- <h3 class="card-header">
                     Service 3
                   </h3> -->
-                  <div class="card-body">
+                  <div class="card-body p-2">
                     <div class="dispDay5 futureForcast"></div>
                   </div>
                 </div>
@@ -139,5 +137,6 @@
   integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="assets/js/script.js"></script>
 </html>
