implemented local storage

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button type="button" class="btn btn-outline-primary mb-3 submitButton">search</button>
               </div>
               <form id="city-input-form"></form>
-              <ul id="city-list"></ul>
+              <ul class="cityList"></ul>
             </div>
           </div>
         </div>
